# cyclic-banded-matrix

./: AB_matrix_fct.f90  CMakeLists.txt  CityPlot.nb  LICENSE  LapackInterface.f90  Notes  README  README.html  README.md  SECURITY.html  SECURITY.md  backward.f90  backward_dcbsv.f90  backward_loop.f90  backward_loop_8.f90  band_matrix.odt  dcbsv.f90  dcbsv_4x4+parallel_omp.f90  dcbsv_4x4parallel_omp.f90  dcbsv_forward.f90  dcbsv_nolapack.f90  dcbsv_old.f90  dcbsv_p4x4parallel_omp.f90  dcbsv_parallel.f90  dcbsv_parallel_omp.f90  dcbsv_reverse.f90  dcbsv_reverse.old.f90  dctsv.f90  dctsv_nolapack.f90  dctsv_parallel.f90  dctsv_parallel_R.f90  dctsv_parallel_omp.f90  dctsv_reverse.f90  forward.f90  forward_dcbsv.f90  forward_loop.f90  forward_loop_8.f90  gauss-jordan.f90  hello.f90  testme.f90  (+4 more)
attic/: dcbsv._forward.old.f90  dcbsv_reverse.old.f90
